finally fixed the enemy flickering after completing an animation cycle

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,10 @@
 body {
   background-image: url('./Assets/background.jpg');
   font-family: 'PressStart2P-Regular', monospace;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
